--- a/Examples/CV19SIM.ipynb
+++ b/Examples/CV19SIM.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "  'E_d': False}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,9 +145,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/home/samuel/covid19geomodeller/Examples/CV19SIM.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/samuel/covid19geomodeller/Examples/CV19SIM.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sims \u001b[39m=\u001b[39m CV19SIM(cfg)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/cv19gm-0.0.1-py3.8.egg/cv19gm/cv19sim.py:44\u001b[0m, in \u001b[0;36mCV19SIM.__init__\u001b[0;34m(self, config, inputdata, model, verbose, **kwargs)\u001b[0m\n\u001b[1;32m     42\u001b[0m aux \u001b[39m=\u001b[39m cv19files\u001b[39m.\u001b[39munwrapconfig(config,\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)        \n\u001b[1;32m     43\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m model:\n\u001b[0;32m---> 44\u001b[0m     model \u001b[39m=\u001b[39m aux[\u001b[39m'\u001b[39;49m\u001b[39mmodel\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m'\u001b[39;49m\u001b[39mmodel\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[1;32m     46\u001b[0m \u001b[39mif\u001b[39;00m model \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mSEIR\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m     47\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodelname \u001b[39m=\u001b[39m model\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'model'"
+     ]
+    }
+   ],
    "source": [
     "sims = CV19SIM(cfg)"
    ]
@@ -858,7 +871,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -873,6 +886,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "cb78786f4cfdfefa515c7b40f13968897104e8ab34623df7a0e4a977a8f1c3ce"
+   }
   }
  },
  "nbformat": 4,
