Git backend tests

--- a/backend/backend_test.ipynb
+++ b/backend/backend_test.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "dict_keys(['idSim', 'model', 'data', 'parameters', 'initialconditions'])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "{'t_init': 0, 't_end': 500, 'mu': 1.5, 'populationfraction': 1}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -165,15 +165,15 @@
    },
    "outputs": [],
    "source": [
-    "#res = requests.post('http://localhost:5003/simulate', json=dictToS192.168.2.131:5003/simulateend)\n",
-    "res = requests.post('http://192.168.2.131:5003/simulate', json=dictToSend)\n",
+    "res = requests.post('http://localhost:5003/simulate', json=dictToSend)\n",
+    "#res = requests.post('http://192.168.2.131:5003/simulate', json=dictToSend)\n",
     "#print('response from server:',res.text)\n",
     "dictFromServer = res.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
