--- a/Examples/SEIRMETA_timetest.ipynb
+++ b/Examples/SEIRMETA_timetest.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "population = np.array([100000,200000,150000])\n",
-    "Phi, Phi_T = cv19mob.rnd_flux(population=population,fraction=0.1,transposed=True)"
+    "Phi, Phi_T = cv19mob.rnd_flux(population=population,fraction=0.25,transposed=True)"
    ]
   },
   {
@@ -208,6 +208,242 @@
     "    plt.legend(loc=0)\n",
     "    plt.title(\"Results comparison city \"+str(j))\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = sympy.Matrix([['a1','a2','a3'],['a4','a5','a6'],['a7','a8','a9']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = sympy.Matrix(['c1','c2','c3'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C_diag = sympy.diag(*C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ones = sympy.ones(rows = 3, cols = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- a_{2} c_{1} + a_{2} c_{2} - a_{3} c_{1} + a_{3} c_{3}\\\\a_{4} c_{1} - a_{4} c_{2} - a_{6} c_{2} + a_{6} c_{3}\\\\a_{7} c_{1} - a_{7} c_{3} + a_{8} c_{2} - a_{8} c_{3}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-a2*c1 + a2*c2 - a3*c1 + a3*c3],\n",
+       "[ a4*c1 - a4*c2 - a6*c2 + a6*c3],\n",
+       "[ a7*c1 - a7*c3 + a8*c2 - a8*c3]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A*C - C_diag*A*ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- a_{2} c_{1} - a_{3} c_{1} + a_{4} c_{2} + a_{7} c_{3}\\\\a_{2} c_{1} - a_{4} c_{2} - a_{6} c_{2} + a_{8} c_{3}\\\\a_{3} c_{1} + a_{6} c_{2} - a_{7} c_{3} - a_{8} c_{3}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-a2*c1 - a3*c1 + a4*c2 + a7*c3],\n",
+       "[ a2*c1 - a4*c2 - a6*c2 + a8*c3],\n",
+       "[ a3*c1 + a6*c2 - a7*c3 - a8*c3]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.transpose()*C - C_diag*A*ones "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- a_{2} - a_{3} & a_{4} & a_{7}\\\\a_{2} & - a_{4} - a_{6} & a_{8}\\\\a_{3} & a_{6} & - a_{7} - a_{8}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-a2 - a3,       a4,       a7],\n",
+       "[      a2, -a4 - a6,       a8],\n",
+       "[      a3,       a6, -a7 - a8]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Original\n",
+    "sympy.Matrix([['-a2 -a3','a4','a7'],['a2','-a4 - a6','a8'],['a3','a6','-a7 - a8']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}- a_{2} - a_{3} & a_{2} & a_{3}\\\\a_{4} & - a_{4} - a_{6} & a_{6}\\\\a_{7} & a_{8} & - a_{7} - a_{8}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[-a2 - a3,       a2,       a3],\n",
+       "[      a4, -a4 - a6,       a6],\n",
+       "[      a7,       a8, -a7 - a8]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No transponse\n",
+    "sympy.Matrix([['-a2 -a3','a2','a3'],['a4','-a4 - a6','a6'],['a7','a8','-a7 - a8']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}a_{1} c_{1} + a_{2} c_{1} + a_{3} c_{1}\\\\a_{4} c_{2} + a_{5} c_{2} + a_{6} c_{2}\\\\a_{7} c_{3} + a_{8} c_{3} + a_{9} c_{3}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[a1*c1 + a2*c1 + a3*c1],\n",
+       "[a4*c2 + a5*c2 + a6*c2],\n",
+       "[a7*c3 + a8*c3 + a9*c3]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C_diag*A*ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}c_{1} & 0 & 0\\\\0 & c_{2} & 0\\\\0 & 0 & c_{3}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[c1,  0,  0],\n",
+       "[ 0, c2,  0],\n",
+       "[ 0,  0, c3]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C_diag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}c_{1}\\\\c_{2}\\\\c_{3}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "Matrix([\n",
+       "[c1],\n",
+       "[c2],\n",
+       "[c3]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C"
    ]
   },
   {
